examples/cpp/failing/method_conflict_with_comments/Base.cpp
#include<stdio.h>

class MyClass {
    void run(int argc) {
        printf("too few arguments\n");
        exit(1);
    }
}
